<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7AC2DC"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        style="@style/ImageViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/adventure_map_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/undraw_adventure_map_hnin_2" />

    <ImageView
        android:id="@+id/imageView2"
        style="@style/ImageViewStyle"
        android:layout_width="213dp"
        android:layout_height="57dp"
        android:contentDescription="@string/welcome_back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244"
        app:srcCompat="@drawable/welcome_back" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:background="@drawable/edit_text_background"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/TextViewStyle"
        android:layout_width="353dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:contentDescription="@string/sign_in_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/sign_in_to_access_your_account" />

    <CheckBox
        android:id="@+id/checkBox3"
        style="@style/CheckBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="Remember me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextViewStyle"
        android:layout_width="128dp"
        android:layout_height="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/forgot_password_text"
        android:text="Forgot Passoword?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/btnOpenFragments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Fragments"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextViewStyle"
        android:layout_width="214dp"
        android:layout_height="19dp"
        android:layout_marginTop="207dp"
        android:layout_marginBottom="44dp"
        android:text="New member? Create account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonStyle"
        android:layout_width="299dp"
        android:layout_height="65dp"
        android:layout_marginTop="140dp"
        android:text="Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:text="@string/navigate_next" />

</androidx.constraintlayout.widget.ConstraintLayout>
